# System_Integration

./: .gitignore  package-lock.json  package.json
00._Assignments/03a._Data_Parsing_Part_III/: filereader.js  main.py  package.json  server.js
00._Assignments/05a._Webhook_System/: commands.txt  guldbar.json  pyproject.toml  webhook_listener.py
00._Assignments/05a._Webhook_System/Exposee/: main.py  pyproject.toml
00._Assignments/06a_Websockets/: app.js  client.js
00._Assignments/08a_DB_Documentation/: backup.sql  database.js  example.db
00._Assignments/08b_MIgrate_From_One_To_Another/: migration_script.js  package.json
00._Assignments/08c_Auth_Integration/: package.json
00._Assignments/10a_GraphQL/: app.js  package.json  resolvers.js
00._Assignments/10b_Integrate_With_Payment/: cards.txt
01._Miscellaneous/: getgooglehomepage.html  getgooglehomepage.sh  paymentiframe.html
01._Miscellaneous/01._Home_Assignments/: filereader.js  filereader.php  package-lock.json
02._Data_Files/: main.py
03._Modules/node_commonjs_modules/: index.js  myModule.js  package-lock.json
06._Servers/python/: main.py  pyproject.toml
08._Server-To-Server/node/: app.js  package.json
08._Server-To-Server/python/: main.py  pyproject.toml
09._Enviromental_variables/: .env  index.js  package.json
09._Enviromental_variables/node/: package.json
09._Enviromental_variables/python/: main.py  pyproject.toml
10._Date/node/: index.js
10._Date/python/: main.py
11._Short_Polling/node/: app.js
21._MYSQL_Backup/: backup.sql
24._Redis/: rediscommands.txt
(+72 files in other folders)
