[tool.poetry]
name = "05a-webhook-system"
version = "0.1.0"
description = ""
authors = ["Breelef <92298494+Breelef@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "05a"}]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
